samples/_failures_safe/1761321471_6e251b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19bef42d.c: In function ‘main’:
./samples/SAFE/__tmp_19bef42d.c:155:48: error: expected ‘)’ at end of input
  155 |     size_t input_len = strlen((char*)temp_input
      |                              ~                 ^
      |                                                )
./samples/SAFE/__tmp_19bef42d.c:155:5: error: expected declaration or statement at end of input
  155 |     size_t input_len = strlen((char*)temp_input
      |     ^~~~~~
